gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-api
  labels:
    app.kubernetes.io/name: mlops-api
spec:
  selector:
    app.kubernetes.io/name: mlops-api
  ports:
    - name: http
      port: 80
      targetPort: http
