gitops/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mlops-gitops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlops-api
                port:
                  number: 80
